// Copyright (c) 2018-2020 MobileCoin Inc.

// Consensus service data types used by both client-facing and peer-facing APIs.

syntax = "proto3";

package consensus_common;

/// Result of ProposeTx call that cannot be represented by a built-in GRPC error code.
enum ProposeTxResult {
    Ok = 0;
    InputsProofsLengthMismatch = 10;
    NoInputs = 11;
    TooManyInputs = 12;
    InsufficientInputSignatures = 13;
    InvalidInputSignature = 14;
    InvalidTransactionSignature = 15;
    InvalidRangeProof = 16;
    InsufficientRingSize = 17;
    TombstoneBlockExceeded = 18;
    TombstoneBlockTooFar = 19;
    NoOutputs = 20;
    TooManyOutputs = 21;
    ExcessiveRingSize = 22;
    DuplicateRingElements = 23;
    UnsortedRingElements = 24;
    UnsortedKeyImages = 25;
    ContainsSpentKeyImage = 26;
    DuplicateKeyImages = 27;
    MissingTxOutMembershipProof = 28;
    InvalidTxOutMembershipProof = 29;
    InvalidRistrettoPublicKey = 30;
    InvalidLedgerContext = 31;
    Ledger = 32;
    MembershipProofValidationError = 33;
    TxFeeError = 34;
    KeyError = 35;
}

/// Response from TxPropose RPC call.
message ProposeTxResponse {
    /// Result.
    ProposeTxResult result = 1;

    /// The number of blocks in the ledger at the time the request was received.
    uint64 num_blocks = 2;
}
